# ChordAlg

./: .gitignore  CMakeLists.txt  ChordAlg.cbp  License.txt  README.md  StyleGuide.txt  Todo.txt  bugs.txt  main.cpp  todo.txt
ChordAlgSrc/: CMakeLists.txt  atom_subgraphs.hpp  atoms.cpp  atoms.h  bt_algorithm.cpp  bt_algorithm.h  chordalg_string.cpp  chordalg_string.h  chordalg_types.h  classic_elimination.cpp  classic_elimination.h  elimination.cpp  elimination.h  elimination_algorithm.cpp  elimination_algorithm.h  elimination_heuristic.cpp  elimination_heuristic.h  elimination_order.cpp  elimination_order.h  file_reader.cpp  file_reader.h  fill_edges.cpp  fill_edges.h  graph.cpp  graph.h  graph_file.cpp  graph_file.h  heuristic_run.cpp  heuristic_run.h  intersection_graph.cpp  intersection_graph.h  lb_elimination.cpp  lb_elimination.h  lb_triang.cpp  lb_triang.h  lex_trie.cpp  lex_trie.h  mcs.cpp  mcs.h  mcs_m.cpp  (+25 more)
ChordAlgSrc/tests/: CMakeLists.txt  atoms_graph_integration_tests.cpp  atoms_graph_tests.cpp  atoms_test_framework.h  atoms_unit_tests.cpp  bt_algorithm_tests.cpp  elimination_order_graph_tests.cpp  elimination_order_unit_tests.cpp  elimination_tests.cpp  file_reader_graph_integration_tests.cpp  file_reader_graph_tests.cpp  file_reader_unit_tests.cpp  fill_edge_graph_tests.cpp  graph_test_framework.h  graph_tests.cpp  graph_unit_tests.cpp  heuristic_run_integration_tests.cpp  heuristic_run_tests.cpp  lb_triang_triangulation_integration_tests.cpp  lb_triang_triangulation_tests.cpp  lex_trie_tests.cpp  lex_trie_unit_tests.cpp  mcs_m_triangulation_integration_tests.cpp  mcs_m_triangulation_tests.cpp  mcs_triangulation_integration_tests.cpp  mcs_triangulation_tests.cpp  minimal_separator_algorithms_integration_tests.cpp  minimal_separator_algorithms_tests.cpp  minimal_separators_tests.cpp  mock_graph_file.h  potential_maxcliques_tests.cpp  separator_components_integration_tests.cpp  separator_components_tests.cpp  separator_graph_integration_tests.cpp  separator_graph_tests.cpp  test_graphs.cpp  test_graphs.h  tree_tests.cpp  triangulation_filledges_tests.cpp  vertices_tests.cpp  (+1 more)
ChordAlgSrc/tests/old_tests/: lextrie_test.cpp  main.cpp  nexus_fr_test.cpp  sal_fr_test.cpp  twocliques_sal.h
ChordAlgSrc/unit_tests/: CMakeLists.txt  file_reader_graph_integration_test.cpp  file_reader_test.cpp  graph_test.cpp
ChordAlgSrc/unit_tests/old_tests/: atoms_test.cpp  dimacs_fr_test.cpp  graph_test.h  graph_utilities_test.cpp  intersection_graph_test.cpp  minimal_separator_algorithms_test.cpp  separator_test.cpp  vertex_pairs_test.cpp
exec/: Atoms.cpp  (+8 more)
executables/: AtomSeparatorGraphExperiment.cxx  Atoms.cxx  AtomsExperiment.cxx  BTMinimumFill.cxx  BTTreewidth.cxx  CMakeLists.txt  CellIntersectionGraph.cxx  ChordalGraph.cxx  CliqueTree.cxx  Composite_heuristic.cxx  DOTFormat.cxx  FillEliminationOrder.cxx  GMLFormat.cxx  LBTriang.cxx  MCS.cxx  MCS_triangulation.cxx  MMC_MaxCompatSupertree.cxx  MMC_heuristic.cxx  MaxCompatSupertree.cxx  MinimalTriangulation.cxx  Mixed_heuristic.cxx  PDRS_ratio_heuristic.cxx  PDRS_wsum_heuristic.cxx  PartitionIntersectionGraph.cxx  PerfectEliminationOrder.cxx  PerfectEliminationOrdering.cxx  PotentialMaxcliques.cxx  SeparatorGraph.cxx  SeparatorGraphExperiment.cxx  chordalg_options.cpp  chordalg_options.h
heuristics_experiments/: CMakeLists.txt  Composite_heuristic.cxx  MMC_heuristic.cxx  Mixed_heuristic.cxx  PDRS_ratio_heuristic.cxx  PDRS_wsum_heuristic.cxx  heuristic_options.cpp  heuristic_options.h  heuristic_run.cpp  heuristic_run.h  heuristic_runs.cpp  heuristic_runs.h  sanity_check.cxx
sanity_checks/: CMakeLists.txt  elimination_heuristics.cxx  lbtriang.cxx  minfill.cxx  pig_cig_separator_graph.cxx  potential_maxcliques.cxx  separator_graph.cxx  treewidth.cxx
sanity_checks/graphs/: 50n100m2k0.05miss0.01err600sec_1.m  50n100m2k0.05miss0.01err600sec_11.m  50n100m2k0.05miss0.01err600sec_13.m  50n100m2k0.05miss0.01err600sec_16.m  50n100m2k0.05miss0.01err600sec_17.m  50n100m2k0.05miss0.01err600sec_18.m  50n100m2k0.05miss0.01err600sec_22.m  50n100m2k0.05miss0.01err600sec_24.m  50n100m2k0.05miss0.01err600sec_25.m  50n100m2k0.05miss0.01err600sec_26.m  50n100m2k0.05miss0.01err600sec_27.m  50n100m2k0.05miss0.01err600sec_3.m  50n100m2k0.05miss0.01err600sec_32.m  50n100m2k0.05miss0.01err600sec_34.m  50n100m2k0.05miss0.01err600sec_37.m  50n100m2k0.05miss0.01err600sec_38.m  50n100m2k0.05miss0.01err600sec_4.m  50n100m2k0.05miss0.01err600sec_41.m  50n100m2k0.05miss0.01err600sec_42.m  50n100m2k0.05miss0.01err600sec_44.m  50n100m2k0.05miss0.01err600sec_46.m  50n100m2k0.05miss0.01err600sec_48.m  50n100m2k0.05miss0.01err600sec_49.m  50n100m2k0.05miss0.01err600sec_5.m  50n100m2k0.05miss0.01err600sec_6.m  run_sanity_checks.sh
sanity_checks/graphs/easy_cases/: 20n30m2k0.05miss0.05err_0.m  20n30m2k0.05miss0.05err_1.m  20n30m2k0.05miss0.05err_10.m  20n30m2k0.05miss0.05err_11.m  20n30m2k0.05miss0.05err_12.m  20n30m2k0.05miss0.05err_13.m  20n30m2k0.05miss0.05err_14.m  20n30m2k0.05miss0.05err_15.m  (+22 more)
separatorgraph_experiments/: AtomSeparatorGraphExperiment.cxx  AtomSeparatorGraphExperimentCIG.cxx  AtomSeparatorGraphExperimentPIG.cxx  AtomsExperiment.cxx  AtomsExperimentCIG.cxx  AtomsExperimentPIG.cxx  CMakeLists.txt  SeparatorGraphExperiment.cxx  SeparatorGraphExperimentCIG.cxx  SeparatorGraphExperimentPIG.cxx
src/: CMakeLists.txt  atoms.cpp  classic_elimination.cpp  classic_elimination.h  classic_heuristics.cpp  connectedcomponentcalculator.cpp  elimination_heuristics.cpp  elimination_order.cpp  elimination_ordering.cpp  file_reader.cpp  file_reader.h  graph.cpp  graph.h  graph_file.h  intersection_graph.cpp  intersection_graph.h  lb_elimination.cpp  lb_triang_heuristic.cpp  lex_trie.cpp  mcs.cpp  mcs.h  minimal_separator_algorithms.cpp  mixed_elimination.cpp  monochromatic_deficiency_heuristic.cpp  perfect_elimination_order.cpp  separation_heuristics.cpp  separator.cpp  separator.h  tree_representation.cpp  vertex_utilities.cpp
src/unit_tests/: CMakeLists.txt  elimination_ordering_test.cpp  graph_test.h  peo_test.cpp  phylo_test.cpp  sal_fr_test.cpp
(+194 files in other folders)
