add_library(ChordAlgLib
                atoms.cpp
                elimination_algorithm.cpp
                elimination_order.cpp
                file_reader.cpp
                fill_edges.cpp
                graph.cpp
                graph_file.cpp
                intersection_graph.cpp
                lex_trie.cpp
                mcs.cpp
                mcs_m.cpp
                minimal_separator_algorithms.cpp
                separator.cpp
                separator_graph.cpp
                tree_representation.cpp
                triangulation.cpp
                vertices.cpp)

add_subdirectory(tests)
