add_library(ChordAlgLib
                atoms.cpp
                chordalg_string.cpp
                elimination_algorithm.cpp
                elimination_order.cpp
                file_reader.cpp
                fill_edges.cpp
                graph.cpp
                graph_file.cpp
                heuristic_run.cpp
                intersection_graph.cpp
                lb_triang.cpp
                lex_trie.cpp
                mcs.cpp
                mcs_m.cpp
                minimal_separator_algorithms.cpp
                separator.cpp
                separator_graph.cpp
                tree.cpp
                tree_representation.cpp
                triangulation.cpp
                vertices.cpp)

add_subdirectory(tests)
