add_library(ChordAlgLib
                atoms.cpp
                chordalg_string.cpp
                elimination.cpp
                elimination_heuristic.cpp
                elimination_order.cpp
                file_reader.cpp
                fill_edges.cpp
                graph.cpp
                graph_file.cpp
                heuristic_run.cpp
                intersection_graph.cpp
                lb_triang.cpp
                lex_trie.cpp
                mcs.cpp
                mcs_m.cpp
                minimal_separators.cpp
                potential_maxcliques.cpp
                separator.cpp
                separator_graph.cpp
                supertree.cpp
                tree.cpp
                tree_representation.cpp
                triangulation.cpp
                vertices.cpp)

add_subdirectory(tests)
