add_library(ChordAlg
                classic_elimination.cpp
                elimination_order.cpp
                file_reader.cpp
                graph.cpp
                intersection_graph.cpp
                lb_elimination.cpp
                lex_trie.cpp
                mcs.cpp
                minimal_separator_algorithms.cpp
                mixed_elimination.cpp
                separator.cpp
                tree_representation.cpp
                vertex_utilities.cpp)

#add_subdirectory(unit_tests)
